# Deribit

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yaml
src/: config.py  database.py
src/api/: main.py
src/api/helpers/: helpers.py
src/api/models/: price_index.py
src/api/routes/: index_price.py
src/client/: main.py  services.py
src/models/: models.py
src/schemas/: price_index.py
src/services/: services.py
src/services/api_services/: price_index_services.py
tests/: conftest.py
tests/test_services/: test_get_currencies.py  test_get_message.py  test_get_price_index.py  test_handle_ticker.py  test_save_data.py
